--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
+    "vue-toast-notification": "^3.1.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
